
 - ECL will always build, by default, with support for Unicode strings.

 - EXT:GETENV coerces its input argument to type BASE-STRING.

 - The garbage collector would reset the counters on every call to
   SI:GC-STATS. This made nested TIME calls not to work, as the statistics of
   the inner call would spoil those of the outer one. This has been fixed.

 - ECL implements CDR 6 (ext:*inspector-hook*) as described in
   http://cdr.eurolisp.org/document/6/index.html

 - ECL ships libffi together with its source tree, much like GMP and GC.

 - On POSIX platforms ECL traps SIGCHLD and uses it to update the status of
   external processes.

 - DIRECTORY accepts the keyword argument :RESOLVE-SYMLINKS.

 - Compiling files now generates C headers with the extension "eclh". This
   is done to avoid accidentally generating header files with the same name
   as those in the C library. Take for instance, float.lsp -> float.h.

 - ECL no longer relies on "git" being installed to gather the git commit id
   and setting (ext:lisp-implementation-vcs-id).

 - When building shared and statically linked libraries, ECL creates an
   extra function that performs two tasks: initializing ECL if it wasn't done
   before, and initializing the library. This can be used to create standalone
   libraries to be linked with other programs. The name of the function typically
   begins with main_dll or main_lib but it is output by ECL on screen.

 - Hash tables do no longer have implicit locking. All complex structures in
   ECL (arrays, hash tables, objects) should be dealt with sufficient care on
   the user side, just as in other programming languages, making use of
   WITH-LOCK and similar facilities.

 - In OPEN the default format is :UTF-8 for Unicode builds and :LATIN-1 for
   others, and the stream element type is always CHARACTER by default.

 - Function read_VV is renamed to ecl_init_module()

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***